--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -48,7 +48,7 @@ h2 {
 }
 
 .slider {
-  width: 784px;
+  width: 780px;
   height: 310px;
   overflow: hidden;
 
@@ -63,6 +63,7 @@ h2 {
 
 .hero {
   position: relative;
+  padding-bottom: 1em;
 
   .store_badge {
     position: absolute;
@@ -85,6 +86,10 @@ h2 {
   color: white;
   padding: 0.5em;
   box-shadow: 0px 0px 20px #444;
+
+  h3 {
+    text-transform: uppercase;
+  }
 
   &::after { // the triangle
     content: " ";
@@ -110,7 +115,7 @@ h2 {
       height: image-height("nikijazmin.png");
       position: absolute;
       left: -73px;
-      top: -53px;
+      top: -37px;
     }
   }
 
@@ -119,26 +124,36 @@ h2 {
     @include post(1);
     margin-top: 4em;
     text-align: right;
-
   }
 }
 
 .about {
+  .about-inner {
+    overflow: hidden;
+    background: url(csalad.png) no-repeat bottom right;
+  }
   // make the image float to the bottom right by adding a flot on top of it
-  .about-wrapper {
+  .floats {
     &::before {
       content: " ";
       float: right;
-      height: 14em;
-      background-color: red;
+      height: 20em;
       display: block;
     }
 
-    img {
-      bottom: 0;
-      right: 0;
-      float: right;
+    &::after {
+      content: " ";
       clear: right;
+      float: right;
+      width: 20em;
+      height: 18em;
+      display: block;
     }
+
+  }
+  .text-wrapper {
+    @include span-columns(8);
+    @include push(1);
+    padding-top: 3em;
   }
 }
